Enhance model loading and device management in main.py
- Introduced configuration for local model loading with `use_local_models` flag.
- Updated device selection logic to prioritize CUDA, MPS, and CPU.
- Adjusted image height to 80 for consistency.
- Improved comments and code readability throughout the model instantiation and loading process.
- Updated README with instructions for training and using local models.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,8 @@ dependencies = [
     "pygame",
     "python-dotenv",
     "huggingface_hub",
-    "vizdoom",
-    "ale-py",
-    "gymnasium[atari]",
     "datasets",
+    "tqdm",
 ]
 
 [tool.pip]
